tdf#164962 sw: Prevent horizontal scrollbar showing up in the

Page Width mode

Change-Id: Ib7346cc726ca9cdb7732a4acce64a71b02cb7489
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/201200
Tested-by: Jenkins
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>